Update html with user accessibility friendly elements

--- a/coderefactor/01-HTML-Git-CSS_02-Homework_Develop_index.html
+++ b/coderefactor/01-HTML-Git-CSS_02-Homework_Develop_index.html
@@ -1,89 +1,82 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css">
-    <title>website</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="style.css">
+        <title>Horiseon Social Solotuion Services Inc.</title>
+    </head>
 
-<body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="SearchEngineOptimization.jpg" alt="Open notebook of hand-written SEO tips on wood table with laptop, coffee cup and colorful writing utensils" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
-                Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="OnlineReputationManagement.jpg" alt="Business owner works at wood table with coffee, tablet, phone and laptop showing colorful graph of improved online reputation" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. 
-                Social media allows anyone with an internet connection to say whatever they want about your business.
-                Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="SocialMediaMarketing.jpg" alt="Diverse team of coworkers use laptops and tablets to share information about social media marketing strategy over coffee" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. 
-                Social media marketing helps you determine which platforms are suited to your brand, using analytics 
-                to find the right markets and increase your lead generation.
-            </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="LeadGeneration.png" alt="Arrow points from spinning gear to dollar sign demonstrating economic benefit of lead generation through Horiseon's Services"/>
-            <p>
-                Inbound strategies for lead generation require less work for your business, 
-                bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <img src="BrandAwareness.png" alt="Light bulb icon radiates out representing better brand awareness as benefit of hiring Horiseon Social Solution Services Inc"/>
-            <p>
-                Users find your business through paid and organic searches, 
-                increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit-cost">
-            <h3>Cost Management</h3>
-            <img src="CostManagement.png" alt="Gear with dollar signs depicting Horiseon saving client money by increasing search ranking thus decreasing advertising costs"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
-    </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
-</body>
+    <body>
+        <header>
+            <h1>Hori<span class="seo">seo</span>n</h1>
+            <menu>
+                <nav>
+                    <button type="button" class="button SEO" href="#search-engine-optimization">Search Engine Optimization</button>
+                    <button type="button" class="button SEO" href="#online-reputation-management">Online Reputation Management</button>
+                    <button type="button" class="button SEO" href="#social-media-marketing">Social Media Marketing</button>
+                </nav>
+            </menu>
+        </header>
+        <main class="hero">
+            <section class="content">
+                <dl class="search-engine-optimization">
+                    <img src="SearchEngineOptimization.jpg" alt="Open notebook of hand-written SEO tips on wood table with laptop, coffee cup and colorful writing utensils" class="float-left" />
+                    <dt>Search Engine Optimization</dt>
+                    <dd>
+                        The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
+                        Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                    </dd>
+                </dl>
+                <dl id="online-reputation-management" class="online-reputation-management">
+                    <img src="OnlineReputationManagement.jpg" alt="Business owner works at wood table with coffee, tablet, phone and laptop showing colorful graph of improved online reputation" class="float-right" />
+                    <dt>Online Reputation Management</dt>
+                    <dd>
+                        The web is full of opinions, and some of these can be negative. 
+                        Social media allows anyone with an internet connection to say whatever they want about your business.
+                        Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                    </dd>
+                </dl>
+                <div id="social-media-marketing" class="social-media-marketing">
+                    <img src="SocialMediaMarketing.jpg" alt="Diverse team of coworkers use laptops and tablets to share information about social media marketing strategy over coffee" class="float-left" />
+                    <dt>Social Media Marketing</dt>
+                    <dd>
+                        Social media continues to have a sizable influence on buying habits. 
+                        Social media marketing helps you determine which platforms are suited to your brand, using analytics 
+                        to find the right markets and increase your lead generation.
+                    </dd>
+                </dl>
+            </section>
+        <section class="benefits">
+            <dl class="benefit-lead">
+                <dt>Lead Generation</dt>
+                <img src="LeadGeneration.png" alt="Arrow points from spinning gear to dollar sign demonstrating economic benefit of lead generation through Horiseon's Services"/>
+                <dd>
+                    Inbound strategies for lead generation require less work for your business, 
+                    bringing customers directly to your website.
+                </dd>
+            </dl>
+            <dl class="benefit-brand">
+                <dt>Brand Awareness</dt>
+                <img src="BrandAwareness.png" alt="Light bulb icon radiates out representing better brand awareness as benefit of hiring Horiseon Social Solution Services Inc"/>
+                <dd>
+                    Users find your business through paid and organic searches, 
+                    increasing the search ranking and visibility for your business.
+                </dd>
+            </dl>
+            <dl class="benefit-cost">
+                <dt>Cost Management</dt>
+                <img src="CostManagement.png" alt="Gear with dollar signs depicting Horiseon saving client money by increasing search ranking thus decreasing advertising costs"></img>
+                <dd>
+                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                </dd>
+            </dl>
+        </section>
+    </main>
+        <footer>
+            <small>Made with ❤️️ by Horiseon</small>
+            <small> &copy; 2019 Horiseon Social Solution Services, Inc.</small>
+        </footer>
+    </body>
 
 </html>
