Add css transform tools

--- a/coderefactor/accessstand.html
+++ b/coderefactor/accessstand.html
@@ -3,6 +3,9 @@
 
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="stylesheet.css">
         <title>Horiseon Social Solotuion Services Inc.</title>
     </head>
@@ -10,13 +13,14 @@
     <body>
         <header>
             <h1>Hori<span class="seo">seo</span>n</h1>
-                <nav>
-                    <button type="button" class="button SEO" href="#search-engine-optimization">Search Engine Optimization</button>
-                    <button type="button" class="button SEO" href="#online-reputation-management">Online Reputation Management</button>
-                    <button type="button" class="button SEO" href="#social-media-marketing">Social Media Marketing</button>
-                </nav>
         </header>
+        <nav>
+            <button type="button" class="button SEO" href="#search-engine-optimization">Search Engine Optimization</button>
+            <button type="button" class="button SEO" href="#online-reputation-management">Online Reputation Management</button>
+            <button type="button" class="button SEO" href="#social-media-marketing">Social Media Marketing</button>
+        </nav>
 
+    
         <main>
             <section class="content">
                 <dl class="search-engine-optimization">
@@ -24,7 +28,7 @@
                     <dt>Search Engine Optimization</dt>
                     <dd>
                         The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
-                        Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                        Search Engine Optimization <abbr title="Search Engine Optimization">(SEO)</abbr> allows you to increase your visibility and find the right customers for your business.
                     </dd>
                 </dl>
                 <dl id="online-reputation-management" class="online-reputation-management">
@@ -71,11 +75,11 @@
                     </dd>
                 </dl>
             </section>
-            <footer>
-                <small>Made with ❤️️ by Horiseon</small>
-                <small> &copy; 2019 Horiseon Social Solution Services, Inc.</small>
-            </footer>
         </main>
+        <footer>
+            <small>Made with <abbr title="love">❤️️</abbr> by Horiseon</small>
+            <small> <abbr title="copyright">&copy;</abbr> 2019 Horiseon Social Solution Services, Inc.</small>
+        </footer>
     </body>
 
 </html>
