Add css styling elemnts

--- a/coderefactor/accessstand.html
+++ b/coderefactor/accessstand.html
@@ -12,15 +12,15 @@
 
     <body>
         <header>
-            <h1>Hori<span class="seo">seo</span>n</h1>
+            <div>
+                <h1>Hori<span class="seo">seo</span>n</h1>
+                <nav>
+                    <button type="button" class="button SEO" href="#search-engine-optimization">Search Engine Optimization</button>
+                    <button type="button" class="button SEO" href="#online-reputation-management">Online Reputation Management</button>
+                    <button type="button" class="button SEO" href="#social-media-marketing">Social Media Marketing</button>
+                </nav>
+            </div>
         </header>
-        <nav>
-            <button type="button" class="button SEO" href="#search-engine-optimization">Search Engine Optimization</button>
-            <button type="button" class="button SEO" href="#online-reputation-management">Online Reputation Management</button>
-            <button type="button" class="button SEO" href="#social-media-marketing">Social Media Marketing</button>
-        </nav>
-
-    
         <main>
             <section class="content">
                 <dl class="search-engine-optimization">
@@ -31,7 +31,7 @@
                         Search Engine Optimization <abbr title="Search Engine Optimization">(SEO)</abbr> allows you to increase your visibility and find the right customers for your business.
                     </dd>
                 </dl>
-                <dl id="online-reputation-management" class="online-reputation-management">
+                <dl class="online-reputation-management">
                     <img src="OnlineReputationManagement.jpg" alt="Business owner works at wood table with coffee, tablet, phone and laptop showing colorful graph of improved online reputation" class="float-right" />
                     <dt>Online Reputation Management</dt>
                     <dd>
@@ -40,7 +40,7 @@
                         Online Reputation Management gives you the control over what potential customers see when they search for your business.
                     </dd>
                 </dl>
-                <dl id="social-media-marketing" class="social-media-marketing">
+                <dl class="social-media-marketing">
                     <img src="SocialMediaMarketing.jpg" alt="Diverse team of coworkers use laptops and tablets to share information about social media marketing strategy over coffee" class="float-left" />
                     <dt>Social Media Marketing</dt>
                     <dd>
