--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 
     <body>
         <header>
-            <div>
+            <div> <!---div styalistic only.  Critical for semi responsive page design and css formatting-->
                 <h1>Hori<span class="seo">seo</span>n</h1>
-                <nav>
-                    <button type="button" class="button SEO" href="#search-engine-optimization">Search Engine Optimization</button>
-                    <button type="button" class="button SEO" href="#online-reputation-management">Online Reputation Management</button>
-                    <button type="button" class="button SEO" href="#social-media-marketing">Social Media Marketing</button>
+                <nav> 
+                    <a class="button" href="#search-engine-optimization">Search Engine Optimization</a> 
+                    <a class="button" href="#online-reputation-management">Online Reputation Management</a> 
+                    <a class="button" href="#social-media-marketing">Social Media Marketing</a>
                 </nav>
             </div>
         </header>
         <main>
             <section class="content">
                 <dl class="search-engine-optimization">
-                    <img src="SearchEngineOptimization.jpg" alt="Open notebook of hand-written SEO tips on wood table with laptop, coffee cup and colorful writing utensils" class="float-left" />
+                    <img id="search-engine-optimization"src="SearchEngineOptimization.jpg" alt="Open notebook of hand-written SEO tips on wood table with laptop, coffee cup and colorful writing utensils" class="float-left" />
                     <dt>Search Engine Optimization</dt>
                     <dd>
                         The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
@@ -33,7 +33,7 @@
                     </dd>
                 </dl>
                 <dl class="online-reputation-management">
-                    <img src="OnlineReputationManagement.jpg" alt="Business owner works at wood table with coffee, tablet, phone and laptop showing colorful graph of improved online reputation" class="float-right" />
+                    <img id="online-reputation-management" src="OnlineReputationManagement.jpg" alt="Business owner works at wood table with coffee, tablet, phone and laptop showing colorful graph of improved online reputation" class="float-right" />
                     <dt>Online Reputation Management</dt>
                     <dd>
                         The web is full of opinions, and some of these can be negative. 
@@ -42,7 +42,7 @@
                     </dd>
                 </dl>
                 <dl class="social-media-marketing">
-                    <img src="SocialMediaMarketing.jpg" alt="Diverse team of coworkers use laptops and tablets to share information about social media marketing strategy over coffee" class="float-left" />
+                    <img id="social-media-marketing" src="SocialMediaMarketing.jpg" alt="Diverse team of coworkers use laptops and tablets to share information about social media marketing strategy over coffee" class="float-left" />
                     <dt>Social Media Marketing</dt>
                     <dd>
                         Social media continues to have a sizable influence on buying habits. 
@@ -52,7 +52,7 @@
                 </dl>
             </section>
             <section class="benefits">
-                <dl class="benefit-lead">
+                <dl>
                     <dt>Lead Generation</dt>
                     <img src="LeadGeneration.png" alt="Arrow points from spinning gear to dollar sign demonstrating economic benefit of lead generation through Horiseon's Services"/>
                     <dd>
@@ -60,7 +60,7 @@
                         bringing customers directly to your website.
                     </dd>
                 </dl>
-                <dl class="benefit-brand">
+                <dl>
                     <dt>Brand Awareness</dt>
                     <img src="BrandAwareness.png" alt="Light bulb icon radiates out representing better brand awareness as benefit of hiring Horiseon Social Solution Services Inc"/>
                     <dd>
@@ -68,7 +68,7 @@
                         increasing the search ranking and visibility for your business.
                     </dd>
                 </dl>
-                <dl class="benefit-cost">
+                <dl>
                     <dt>Cost Management</dt>
                     <img src="CostManagement.png" alt="Gear with dollar signs depicting Horiseon saving client money by increasing search ranking thus decreasing advertising costs"></img>
                     <dd>
@@ -78,8 +78,8 @@
             </section>
         </main>
         <footer>
-            <small>Made with <abbr title="love">❤️️</abbr> by Horiseon</small>
-            <small> <abbr title="copyright">&copy;</abbr> 2019 Horiseon Social Solution Services, Inc.</small>
+            <small class="footersmall">Made with <abbr title="love">❤️️</abbr> by Horiseon</small>
+            <small Class="footersmall"> <abbr title="copyright">&copy;</abbr> 2019 Horiseon Social Solution Services, Inc.</small>
         </footer>
     </body>
 
